apps/postgres/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-red
  name: node-red
spec:
  clusterIP: None
  ports:
  - port: 1880
    targetPort: http
    protocol: TCP
    name: http
